# hg-licensing

./: CNAME  HYPERION_GRAY_BOOK_ON_LICENSING_FOR_PEOPLE_WHO_CANT_READ_GOOD_AND_WANT_TO_LEARN_TO_DO_OTHER_STUFF_GOOD_TOO.md  LICENSE.SHGODL.md  LICENSE.WHGOSL.md  README.md  _config.yml  bh-abstract.md  cfp_bible.md  cfp_cia.md  cfp_cult.md  choose-your-license.md  df-abstract.md  hg_license_cli.1  hg_license_cli.py  index.md  install_manpages.sh  license-tarot.md  pyproject.toml  rfp-abstract.md  speaker_bio.md  speaker_bio.md~
assets/: main.css
